Arreglando fuente extraña en algunas alertas